Task 4 clarity changes

--- a/templates/hw/task3.html
+++ b/templates/hw/task3.html
@@ -432,7 +432,7 @@
         <p>
             Note: You can see feedback in Autolab for your tests without completing the
             programming portion of
-            this task, but you must at least create every clas/method from this specification. You can "stub
+            this task, but you must at least create every class/method from this specification. You can "stub
             out"
             these methods by having them always return a fixed value, but they must exist so the grading code,
             and your tests, can compile and run.
