Task 4 TargetingPlayer clarification

--- a/templates/hw/task4.html
+++ b/templates/hw/task4.html
@@ -362,7 +362,8 @@
                                         Override the <code>decide</code> method and will return true if the
                                         distance from the DynamicGameObject's target destination (the tail node of their
                                         path) to the player's current location is less than or equal to the distance
-                                        instance variable and false otherwise. Also return false if the path is empty
+                                        instance variable and false otherwise (as previously, you should being using the
+                                        Euclidean Distance in your calculation). Also return false if the path is empty
                                     </li>
                                 </ul>
                             </li>
