validatePath and MoveTowardsPlayer fix

--- a/templates/hw/task2.html
+++ b/templates/hw/task2.html
@@ -369,7 +369,10 @@
                         valid path between any 2 tiles.
                     </li>
                     <li>
-                        Consider an input path of null or an input path with only one vector to be valid.
+                        Consider an input path of null to be valid
+                    </li>
+                    <li>
+                        Consider an input path with only one vector to be valid as long as it's components are whole numbers.
                     </li>
                 </ul>
             </li>
