--- a/templates/hw/task4.html
+++ b/templates/hw/task4.html
@@ -367,10 +367,10 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><code>MoveTowardPlayer</code>
+                            <li><code>MoveTowardsPlayer</code>
                                 <ul>
                                     <li>
-                                        Create the <code>MoveTowardPlayer</code> class that extends
+                                        Create the <code>MoveTowardsPlayer</code> class that extends
                                         <code>Decision</code>. Add a
                                         constructor that takes in a string for the name and call the super constructor;
                                         there are no additional parameters or instance variables for this class
@@ -446,7 +446,7 @@
                                     <li>
                                         Override the <code>doAction</code> method and should set the
                                         DynamicGameObject's velocity to 0 and recalculate the DynamicGameObject's path
-                                        with the destination at the player just like in MoveTowardPlayer
+                                        with the destination at the player just like in MoveTowardsPlayer
                                         (Set their path to the result of Pathfinding.findPath). You do not have to
                                         handle all 3 cases like before. Always set their path when this method is called
                                     </li>
